<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your Way!</string>
    <string name="powered_by">Powered By Megha Bhutada</string>


    <!-- Strings for On boarding screen -->
    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you do not have to worry about anything.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!-- Strings for Dashboard -->
    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!--Tiles and Description-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_location">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search....</string>
</resources>