<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserDashboard"
    android:orientation="vertical"
    android:background="@color/home_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu_icon"
            android:layout_centerVertical="true">
        </ImageView>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/missing_place_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:background="@color/banner_background">

        </ImageView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/brandon_gresque_black"
                    android:text="@string/logo_name"
                    android:textSize="28sp"></TextView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/app_name"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:elevation="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/search_text"></TextView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/search_icon">

                    </ImageView>

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/banner_background_light">

                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:layout_margin="10dp"
                    android:background="@color/banner_background"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/featured_locations"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/featured_location_description">
                    </TextView>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_toRightOf="@+id/featured_background"
                    android:background="@color/home_background" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card_1"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/restaurant_icon">

                        </ImageView>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/restaurants"
                        android:textAlignment="center">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card_2"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/bank_icon">

                        </ImageView>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/hotels"
                        android:textAlignment="center">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card_3"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/school_icon">

                        </ImageView>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/airports"
                        android:textAlignment="center">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card_4"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/shop_icon">

                        </ImageView>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/shops"
                        android:textAlignment="center">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_gresque_black"
                        android:text="@string/most_viewed_location"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/view_all">

                    </TextView>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/most_viewed_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_gresque_black"
                        android:text="@string/categories"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/view_all">

                    </TextView>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>




</LinearLayout>